# MailSpreader

./: .gitignore  README.md  config.yaml  info.yaml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  urls.yaml
data/: .~lock.prospect_list.csv#  .~lock.prospect_list_v1_corrected.csv#  prospect_list.csv  prospect_list_v1_corrected.csv
mailspreader/: __init__.py  exporter.py  linkedin_scraper.py  summarizer.py  website_parser.py
src/mail_spreader/: cli.py  export.py  industries_ids.json  parser.py  scraper.py  summarizer.py  utils.py
src/mail_spreader/templates/job/: all_industries.yaml  electronics_industries.yaml
template/: config.yaml
template/job/: computer_science.yaml
