# pyproject.toml
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mail_spreader"
version = "0.1.0"
description = "Tools to automate LinkedIn-based mailings"

dependencies = [
  "pyyaml",
  "typer",  # retirer l'extra [all]
  "undetected-chromedriver",
  "selenium",
  "torch",
  "transformers",
  "regex",
  "sympy",
  "scikit-learn"
]

[project.scripts]
mail-spreader = "mail_spreader.cli:app"  # pointer vers le module réel de ton package

[tool.setuptools.packages.find]
where = ["src"]
